# Sistema-de-Controle-para-Times-Esportivos

./: README.md
Sistema de Controle para Times Esportivos/: CMakeLists.txt  Empresa.cpp  Empresa.hpp  Jogador.cpp  Jogador.hpp  Time.cpp  Time.hpp  main.cpp
